ova/static/css/imports/people.css
.people {
  grid-template-columns: repeat(auto-fit, minmax(32rem, 1fr));
  margin-block-end: 9.6rem;
}

.people.grid {
  row-gap: 0;
}

.people > * {
  grid-column: unset;
}

.person {
  border-radius: 1.6rem;
  color: inherit;
  display: flex;
  flex-direction: column;
  padding: 1.6rem;
  position: relative;
  text-decoration: none;
  transition: border 0.2s;
}

.person figure {
  display: flex;
  gap: 1.6rem;
  margin: 0;
}

.person figcaption {
  display: flex;
  flex-direction: column;
  gap: 0.4rem;
  justify-content: center;
}

.person .tagline {
  color: light-dark(var(--neutral-700), var(--neutral-300));
  text-wrap: balance;
}

.person .media {
  align-self: center;
  aspect-ratio: 1;
  background: light-dark(var(--neutral-200), var(--neutral-800));
  border-radius: 0.4rem;
  display: block;
  flex-shrink: 0;
  max-width: 100%;
  object-fit: cover;
  object-position: center top;
  opacity: 0.5;
  text-align: center;
  width: 12rem;
}

.person .media[src] {
  box-shadow: 0 0 0 1px light-dark(var(--neutral-200), var(--neutral-800));
  opacity: 1;
}

.person[data-former="true"] strong::after {
  background: light-dark(var(--neutral-200), var(--neutral-800));
  border-radius: 0.4rem;
  content: " Former";
  display: inline-block;
  font-size: .8em;
  font-weight: normal;
  line-height: 1.5;
  margin-inline: 0.5em;
  padding-block-start: 0.125em;
  padding-inline: 0.5em;
}

.people dialog[open] {
  border: 1px solid currentColor;
  border-radius: 1.6rem;
  margin-inline: auto;
  max-width: var(--max-width);
  padding: 1.6rem;
  width: calc(100% - calc(var(--margin) * 1));
}

body:has(.people dialog[open]) {
  filter: blur(8px);
}

.people dialog::backdrop {
  background: light-dark(var(--neutral-100), var(--neutral-900));
  opacity: .75;
}

.people dialog .details {
  grid-column: span 12;
}

.people dialog .links svg {
  flex-shrink: 0;
  height: 2rem;
  width: 2rem;
}

.people dialog > .button {
  aspect-ratio: 1;
  margin-block-end: 1.6rem;
  margin-inline: auto;
  padding: .6rem;
  position: fixed;
  z-index: 1;
}

.people dialog .person {
  display: grid;
  gap: var(--gutter);
  grid-template-columns: repeat(1, 1fr);
  margin-inline: auto;
  max-width: var(--max-width);
  padding: 0;
  place-self: center;
  width: 100%;
}

.people dialog .person .media {
  align-self: start;
  border-radius: .8rem;
  justify-self: center;
  max-width: 24rem;
  width: 100%;
}

.people dialog .person .info {
  padding-block: 1.6rem;
}

.people dialog .person h2 {
  margin-block-end: .8rem;
}

.people dialog .person h3 {
  line-height: 2.4rem;
  margin-block-end: .25em;
  padding-inline: 0;
}

.people dialog .person .tagline {
  font-size: unset;
}

.people dialog .person .bio {
  color: light-dark(var(--neutral-700), var(--neutral-300));
  padding-block-start: .8rem;
}

.people dialog .courses {
  display: flex;
  flex-direction: column;
  gap: .4rem;
  list-style-type: square;
  margin: 0;
  padding: 0;
  padding-inline-start: 1em;
  text-wrap: balance;
}

.people dialog .courses a {
  text-decoration: none;
  text-underline-position: under;
}

.people dialog .links {
  display: flex;
  flex-direction: column;
  gap: .8rem;
  grid-column: 1/-1;
  justify-self: start;
  list-style: none;
  margin: 0;
  max-width: 100%;
  padding: 0;
}

.people dialog .links li {
  margin: 0;
  padding: 0;
}

.people dialog .links li a {
  align-items: center;
  display: flex;
  gap: .8rem;
  text-decoration: none;
  text-underline-position: under;
  width: fit-content;
  word-break: break-all;
}

@media (hover: hover) {
  .person:is(a,button,[role=button]) {
    border: 1px solid transparent;
    cursor: pointer;
  }

  .person:is(a,button,[role=button]):hover {
    border: 1px solid light-dark(var(--neutral-900), var(--neutral-100));
  }
  
  .people dialog .links li a:hover,
  .people dialog .courses li a:hover {
    text-decoration: underline;
  }
}

@media (min-width: 640px) {
  .people.grid {
    row-gap: inherit;
  }

  .people dialog[open] {
    width: calc(100% - calc(var(--margin) * 2));
  }

  .people dialog .person {
    grid-template-columns: repeat(2, 1fr);
  }

  .people dialog .person .media {
    border-radius: .4rem;;
    justify-self: start;
    max-width: initial;
  }

  .people dialog > .button {
    position: relative;
  }
}

@media (min-width: 1152px) {
  .people dialog {
    overflow: visible;
  }

  .people dialog .person {
    grid-template-columns: repeat(3, 1fr);
    padding: 1.6rem;
  }

  .people dialog .links {
    gap: 1.6rem;
    grid-column: auto;
    justify-self: end;
    padding: 1.6rem;
  }

  .people dialog .links li a {
    gap: 1.6rem;
  }

  .people dialog .person .bio {
    padding-block-start: 1.6rem;
  }

  .people dialog > .button {
    left: 0;
    margin: 0;
    position: absolute;
    top: -1.6rem;
    translate: 0 -100%;
  }  
}

/* Force light theme if browser does not support light-dark rules */
@supports not (color: light-dark(black, white)) {
  .person .tagline {
    color: var(--neutral-700);
  }

  .person .media {
    background: var(--neutral-200);
  }

  .person .media[src] {
    box-shadow: 0 0 0 1px var(--neutral-200);
  }
  .person[data-former="true"] strong::after {
    background: var(--neutral-200);
  }

  .people dialog::backdrop {
    background: var(--neutral-100);
  }

  .people dialog .person .bio {
    color: var(--neutral-700);
  }

  @media (hover: hover) {
    .person:is(a,button,[role=button]):hover {
      border: 1px solid var(--neutral-900);
    }
  }
}

